<resources>
    <string name="app_name">TREUSBS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_number">Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirm Password</string>
    <string name="login">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="button_submit">Submit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="need_read_permissions">Please enable read storage permission for image
        processing to work</string>
    <string name="need_write_permissions">Please enable write storage permission for image
        processing to work</string>
    <string name="licence_hint">Enter vehicle\'s licence number</string>
    <string name="upload_text">Upload offence</string>

</resources>
