<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/blue_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:fontFamily="sans-serif-condensed"
            android:textSize="26sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:textColorHint="#E0E0E0"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpName"
                    android:inputType="text"
                    android:hint="@string/prompt_name"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="50dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:textColorHint="#E0E0E0"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpEmail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="50dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:textColorHint="#E0E0E0"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpNumber"
                    android:inputType="phone"
                    android:hint="@string/prompt_number"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="50dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#E0E0E0"
                app:hintAnimationEnabled="true"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpPassword"
                    android:hint="@string/prompt_password"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="30dp"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#E0E0E0"
                app:hintAnimationEnabled="true"
                android:theme="@style/MyEditTextTheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpConfirmPassword"
                    android:hint="@string/prompt_confirm"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="30dp"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpSubmit"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_submit"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

    </LinearLayout>

</ScrollView>